Fix: cannot load check defintions via http/https